syntax = "proto3";

package proto;

message BaseMsg {
  string type = 1;
  bytes msg = 2;
}
